<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/movie_detail_description_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="6">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:background="@color/colorPrimary"/>
        <ImageView
            android:layout_width="300dip"
            android:layout_height="310dip"
            android:id="@+id/imgv_movie_poster"
            android:contentDescription="@string/thumbnail_image"
            android:layout_centerInParent="true"/>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:padding="5dip"
        android:orientation="vertical"
        android:layout_weight="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtv_movie_name"
            android:textSize="17sp"
            android:layout_margin="5dip"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llyt_movie_details"
            android:orientation="horizontal">



            <TextView
                android:layout_width="0dip"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/txtv_release_date"
                android:textSize="15sp"
                android:layout_margin="5dip"/>

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/txtv_movie_rating"
                android:textSize="15sp"
                android:layout_margin="5dip"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/movie_overview_label"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_margin="2dip"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:id="@+id/txtv_movie_plot_details"/>
        </ScrollView>
    </LinearLayout>


</LinearLayout>